# ai_vibe_rajak_fork

./: .gitignore  AGENTS.md  CLAUDE.md  OLLAMA.md  PYTHON_ENV.md  docker-compose.yml  main.py  pyproject.toml  temp.txt
.claude/: settings.local.json
codex/: CLAUDE_HOWTO_AI.MD  CODEX_INSTRUCTIONS.MD  PROMPT.MD
session10/: main.py  requirements.txt  state.py
session10/data/input/: cv_original.html  cv_original_1.html  job_description.txt
session10/data/output/: .gitkeep
session10/nodes/: analyze_jd.py  gap_questions.py  ingest.py  planner.py  render_html.py  validator.py  write_outputs.py
session10/prompts/: gap_analysis.py  gap_questions.py  planner.py  validator.py
session10_gandra/: .env.example  .gitignore  HOWTO.md  README.md  main.py  plan.md
session10_gandra/nodes/: __init__.py  gap_analysis.py  parse_cv.py  tailor_writer.py
session10_gandra/prompts/: __init__.py  analyze_jd.py  parse_cv.py  tailor_writer.py
session7/: mcp.md  prompt.txt
session9/: multiagv3faiss_persisted.py
