[project]
name = "ai-vibe-rajak-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.1.3",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
]
